--- a/Ironc.ly/Info.plist
+++ b/Ironc.ly/Info.plist
@@ -23,11 +23,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Allow access to the camera to take and share photos</string>
+	<string>Take photos and videos</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>to record Live Photos and movies</string>
+	<string>Record sound in your videos</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>to save photos and videos to your Photo Library</string>
+	<string>Save photos and videos to your photo library</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
