--- a/Ironc.ly/Info.plist
+++ b/Ironc.ly/Info.plist
@@ -52,6 +52,7 @@
 	<string>Save photos and videos to your photo library</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>scratchy.ttf</string>
 		<string>freehand.ttf</string>
 		<string>font2.ttf</string>
 		<string>handwriting.ttf</string>
